Stats alpha + SQL

--- a/vues/stats.html.twig
+++ b/vues/stats.html.twig
@@ -1,1 +1,54 @@
-{# empty Twig template #}
+<!--
+    
+    Ici il faut afficher les eleves
+
+-->
+{% extends "layout.html.twig" %}
+
+{% block content %}
+<section class="content-header">
+    <h1>
+        Eleves
+        <small>liste</small>
+    </h1>
+        </section>
+
+        <!-- Main content -->
+        <section class="content">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="box box-warning">
+                <div class="box-header">
+                  <h3 class="box-title">Eleves</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                  <table id="example1" class="table table-bordered table-striped">
+                    <thead>
+                      <tr>
+                        <th>Activites</th>
+                        {% for competence in competences %}
+                        <th>{{ competence._reference }} : {{ competence._libelle}}</th>
+                        {% endfor %}
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for activite in activites %}
+                          <tr>
+                            <th>{{ activite._libelle }}</th>
+                            {% for competence in competences %}
+                                {% if %}
+                                    <th>X</th>
+                                {% else %}
+                                    <th> </th>
+                                {% endif %}
+                            {% endfor %}
+                          </tr>
+                        {% endfor %}
+                    </tbody>
+                  </table>
+                </div><!-- /.box-body -->
+              </div><!-- /.box -->
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+        </section><!-- /.content -->
+{% endblock %}
