--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -33,9 +33,9 @@
                     <tbody>
                         {% for promotion in promotions %}
                           <tr>
-                            <th>{{ activite._id }}</th>
-                            <th>{{ activite._annee }}</th>
-                            <th>{{ activite._libelle }}</th>
+                            <th>{{ promtion._id }}</th>
+                            <th>{{ promotion._annee }}</th>
+                            <th>{{ promotion._libelle }}</th>
                           </tr>
                         {% endfor %}
                     </tbody>
