--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -8,8 +8,8 @@
 {% block content %}
 <section class="content-header">
     <h1>
-        Promotions
-        <small>liste</small>
+        Competences
+        <small>ajout</small>
     </h1>
         </section>
 
