--- a/vues/ajout_competence.html.twig
+++ b/vues/ajout_competence.html.twig
@@ -19,23 +19,20 @@
                     <!-- text input -->
                     <div class="form-group">
                       <label>Reference</label>
-                      <input type="text" class="form-control" placeholder="A.X.X.">
+                      <input type="text" name="reference" class="form-control" placeholder="A.X.X.">
                       
                       <label>Libelle</label>
-                      <input type="text" class="form-control" placeholder="Libelle">
+                      <input type="text" name="libelle" class="form-control" placeholder="Libelle">
                       
                       <label>Description</label>
-                      <input type="text" class="form-control" placeholder="Description">
+                      <input type="text" name="description" class="form-control" placeholder="Description">
                     </div>
                     
-                    <!-- checkbox -->
                     <div class="form-group">
                       <div class="radio">
                         <label>
                           <input type="radio" value="true" checked>
                           Obligatoire
-                        </label>
-                        <label>
                           <input type="radio" value="false" checked>
                           Non-obligatoire
                         </label>
