--- a/vues/ajout_competence.html.twig
+++ b/vues/ajout_competence.html.twig
@@ -31,11 +31,13 @@
                     <div class="form-group">
                       <div class="radio">
                         <label>
-                          <input type="radio" value="true" checked>
+                          <input type="radio" name="obligatoire" value="true" checked>
                           Obligatoire
-                          <input type="radio" value="false" checked>
-                          Non-obligatoire
                         </label>
+                        <label>
+                          <input type="radio" name="obligatoire" value="false" checked>
+                          Non-obligatoire
+                        </label>      
                       </div>
                     </div>
                     
