--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -21,26 +21,33 @@
                   <form role="form" method="POST" action={{ path('{# route a faire #}') }}>
                     <!-- text input -->
                     <div class="form-group">    
-                      <label>Reference</label>
+                      <label>Nom</label>
                       <input type="text" name="reference" class="form-control" placeholder="A.X.X.">
                       
-                      <label>Libelle</label>
+                      <label>Prénom</label>
                       <input type="text" name="libelle" class="form-control" placeholder="Libelle">
                       
-                      <label>Description</label>
+                      <label>E-mail</label>
                       <input type="text" name="description" class="form-control" placeholder="Description">
+                        
+                      
                     </div>
                     
                     <div class="form-group">
                       <div class="radio">
+                        <label>Vous etes ?</label>
                         <label>
                           <input type="radio" name="obligatoire" value="true" checked>
-                          Obligatoire
+                          Un(e) Eleve
                         </label>
                         <label>
                           <input type="radio" name="obligatoire" value="false" checked>
-                          Non-obligatoire
-                        </label>      
+                          Un Professeur
+                        </label>
+                        <label>
+                          <input type="radio" name="obligatoire" value="false" checked>
+                          Un Visiteur
+                        </label> 
                       </div>
                     </div>
                     
