--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -68,7 +68,7 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="header">MENU</li>
-            <li class="active treeview">
+            <li class="treeview">
               <a href="{{ path('activite') }}">
                 <i class="fa fa-group"></i> <span>Activités</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
