--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,7 +5,7 @@
 
     <h1>
         Compétences
-        <small>liste</small>
+        <small>liste</small><button type="button" class="btn bg-orange btn-flat margin"> Ajouter Compétence </button>
     </h1>
         </section>
 
@@ -18,6 +18,7 @@
                     Voici les competences acquises :  
             </h3>
           </div>
+        <div class="box-body">
             <table id="example1" class="table table-bordered table-striped">
                 <thead>
                     <tr>
@@ -53,8 +54,9 @@
                     </tr>
                 </tfoot>
             </table>
-          </div>
-         </div>
-        </div>
-    </section>
+          </div> <!-- box-body --> 
+         </div> <!-- box --> 
+        </div> <!-- col --> 
+       </div> <!-- row --> 
+    </section> <!-- content -->
 {% endblock %}
