--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,7 +5,8 @@
 
     <h1>
         Compétences
-        <small>liste</small><button type="button" class="btn bg-orange btn-flat margin"> Ajouter Compétence </button>
+        <small>liste</small><button type="button" style="float:right, margin:0px" class="btn bg-orange btn-flat margin" action="/new" > Ajouter Compétence </button>
+    
     </h1>
         </section>
 
