--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -99,22 +99,22 @@
               </a>
             </li>
             <li class="treeview">
-              <a href={{ path('competence') }}>
+              <a href="{{ path('competence') }}">
                 <i class="fa fa-usd"></i> <span>Compétences</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
-              <a href={{ path('promotion') }}>
+              <a href="{{ path('promotion') }}">
                 <i class="fa fa-usd"></i> <span>Promotions</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
-              <a href={{ path('eleve') }}>
+              <a href="{{ path('eleve') }}">
                 <i class="fa fa-usd"></i> <span>Éleves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
-              <a href={{ path('professeur') }}>
+              <a href="{{ path('professeur') }}">
                 <i class="fa fa-usd"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
