--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Activites
-        <small>liste</small>
+        <small>liste</small><button type="button" style="float:right, margin:0px" class="btn bg-orange btn-flat margin" action="/new" > Ajouter</button>
     </h1>
         </section>
 
@@ -25,6 +25,7 @@
                         <th>Duree</th>
                         <th>Libelle</th>
                         <th>Description</th>
+                        <th>Competences</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -35,6 +36,7 @@
                             <th>{{ activite._duree }}</th>
                             <th>{{ activite._libelle }}</th>
                             <th>{{ activite._description }}</th>
+                            <th>{% activite._competences %}</th>
                           </tr>
                         {% endfor %}
                     </tbody>
@@ -45,6 +47,7 @@
                         <th>Duree</th>
                         <th>Libelle</th>
                         <th>Description</th>
+                        <th>Competences</th>
                       </tr>
                     </tfoot>
                   </table>
