--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -15,35 +15,23 @@
                   <h3 class="box-title">Ajout</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                    {# Il faut modifier le formulaire pour permettre de rentrer les donnees d'une activite 
-                        Referes toi au champ de la bdd et anlyse le code (ce formulaire est celui de l'ajout de competence)
-                    #}
-                  <form role="form" method="POST" action={{ path('activite/') }}> {# Il faut recuperer l'id de l'utilisateur connecte #}
+                    {#1#}
+                  <form role="form" method="POST" action={{ path('activite/') }}> {#2}
                     <!-- text input -->
                     <div class="form-group">    
-                      <label>Reference</label>
-                      <input type="text" name="reference" class="form-control" placeholder="A.X.X.">
+                      <label>Date de Debut</label>
+                      <input type="date" name="reference" class="form-control" placeholder="jj / mm / aa">
+                      
+                      <label>Duree</label>
+                      <input type="text" name="duree" class="form-control" placeholder="jours/semaines/mois/années">
                       
                       <label>Libelle</label>
-                      <input type="text" name="libelle" class="form-control" placeholder="Libelle">
-                      
+                      <input type="text" name="libelle" class="form-control" placeholder="libelle">
+                        
                       <label>Description</label>
-                      <input type="text" name="description" class="form-control" placeholder="Description">
+                      <input type="text" name="description" class="form-control" placeholder="Description">    
                     </div>
-                    
-                    <div class="form-group">
-                      <div class="radio">
-                        <label>
-                          <input type="radio" name="obligatoire" value="true" checked>
-                          Obligatoire
-                        </label>
-                        <label>
-                          <input type="radio" name="obligatoire" value="false" checked>
-                          Non-obligatoire
-                        </label>      
-                      </div>
-                    </div>
-                    
+            
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Enregistrer</button>
                     </div>
