--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Competences
-        <small>ajout</small>
+        <small>ajout</small><button type="button" style="float:right, margin:0px" class="btn bg-orange btn-flat margin" action="/new" > Ajouter</button>
     </h1>
         </section>
 
