--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -16,11 +16,11 @@
                 </div><!-- /.box-header -->
                 <div class="box-body">
                     {#1#}
-                  <form role="form" method="POST" action={{ path('activite/') }}> {#2}
+                  <form role="form" method="POST" action={{ path('activite/new') }}> {#2}
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Date de Debut</label>
-                      <input type="date" name="reference" class="form-control" placeholder="jj / mm / aa">
+                      <input type="date" name="reference" class="form-co ntrol" placeholder="jj / mm / aa">
                       
                       <label>Duree</label>
                       <input type="text" name="duree" class="form-control" placeholder="jours/semaines/mois/années">
