--- a/vues/ajout_promotion.html.twig
+++ b/vues/ajout_promotion.html.twig
@@ -15,32 +15,15 @@
                   <h3 class="box-title">Ajout</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                  <form role="form" method="POST" action={{ path('competence') }}>
+                  <form role="form" method="POST" action={{ path('promotion/new') }}>
                     <!-- text input -->
                     <div class="form-group">
                       <label>Annee Scolaire</label>
-                      <input type="text" name="reference" class="form-control" placeholder="A.X.X.">
+                      <input type="text" name="annee" class="form-control" placeholder="20xx-20xx">
                       
                       <label>Libelle</label>
                       <input type="text" name="libelle" class="form-control" placeholder="Libelle">
-                      
-                      <label>Description</label>
-                      <input type="text" name="description" class="form-control" placeholder="Description">
                     </div>
-                    
-                    <div class="form-group">
-                      <div class="radio">
-                        <label>
-                          <input type="radio" name="obligatoire" value="true" checked>
-                          Obligatoire
-                        </label>
-                        <label>
-                          <input type="radio" name="obligatoire" value="false" checked>
-                          Non-obligatoire
-                        </label>      
-                      </div>
-                    </div>
-                    
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Enregistrer</button>
                     </div>
