--- a/vues/ajout_promotion.html.twig
+++ b/vues/ajout_promotion.html.twig
@@ -15,7 +15,7 @@
                   <h3 class="box-title">Ajout</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                  <form role="form" method="POST" action={{ path('promotion/new') }}>
+                  <form role="form" method="POST" action={{ path('promotion') }}>
                     <!-- text input -->
                     <div class="form-group">
                       <label>Annee Scolaire</label>
