--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -15,7 +15,7 @@
                   <h3 class="box-title">Ajout</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                  <form role="form" method="POST" action={{ path('utilisateur/new') }}>
+                  <form role="form" method="POST" action={{ path('utilisateur') }}>
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Pseudo</label>
