--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -16,7 +16,7 @@
                 </div><!-- /.box-header -->
                 <div class="box-body">
                     {#1#}
-                  <form role="form" method="POST" action={{ path('activite/new') }}> {#2}
+                  <form role="form" method="POST" action={{ path('activite') }}> {#2}
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Date de Debut</label>
