--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -15,8 +15,7 @@
                   <h3 class="box-title">Ajout</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                    {#1#}
-                  <form role="form" method="POST" action={{ path('activite') }}> {#2}
+                  <form role="form" method="POST" action={{ path('activite') }}>
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Date de Debut</label>
