--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -12,7 +12,7 @@
             <div class="col-xs-12">
                 <div class="box box-warning">
                 <div class="box-header with-border">
-                  <h3 class="box-title">Ajout</h3>
+                  <h3 class="box-title">Ajouter un Nouveau Utilisateur</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <form role="form" method="POST" action={{ path('utilisateur') }}>
