--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,8 +5,13 @@
 
     <h1>
         Compétences
-        <small>liste</small><button type="button" style="float:right, margin:0px" class="btn bg-orange btn-flat margin" action="/new" > Ajouter </button>
-    
+        <small>liste</small>
+            <form method="get" action="/new">
+                <button type="button" style="float:right;margin:0px;" class="btn bg-orange btn-flat margin"  >
+                    Ajouter
+                </button>
+            </form>
+
     </h1>
         </section>
 
